feat: adding more features for user
