# src/models/users/dto/userDto.ts
@@ -3,6 +3,7 @@ import type { Role, Status } from '../../../../generated/prisma/index.js'
 export interface UserDto {
   name: string
   email: string
+  telefone: string
   password: string
   confirmPassword: string
   status: Status
